k8s/apps/base/yattee-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: yattee-server
  namespace: yattee-server
  labels:
    app: yattee-server
spec:
  type: ClusterIP
  selector:
    app: yattee-server
  ports:
    - name: http
      port: 8085
      targetPort: 8085
