k8s/apps/base/yattee-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yattee-server
  namespace: yattee-server
  labels:
    app.kubernetes.io/name: yattee-server
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - yattee.internal.kentaro1043.com
      secretName: yattee-server-tls
  rules:
    - host: yattee.internal.kentaro1043.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: yattee-server
                port:
                  name: http
